# fast-paths

./: Cargo.toml  README.md  fast_paths.pyi  pyproject.toml
examples/: example.py
src/: lib.rs
