[build-system]
requires = ["maturin>=1.13,<2.0"]
build-backend = "maturin"

[project]
name = "fast-paths"
description = "Python bindings to the fast_paths Rust crate – ultra-fast shortest path calculations using Contraction Hierarchies"
readme = "README.md"
license = { text = "MIT OR Apache-2.0" }
authors = [{ name = "Thell Fowler", email = "thell@tbfowler.net" }]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/Thell/fast-paths"
Repository = "https://github.com/Thell/fast-paths"
Documentation = "https://docs.rs/fast_paths/1.0.0"

[tool.maturin]
bindings = "pyo3"
features = ["pyo3/extension-module"]
